--- a/blogs.html
+++ b/blogs.html
@@ -28,7 +28,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
+          <li class="nav-item ">
             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
@@ -40,7 +40,7 @@
           <li class="nav-item">
             <a class="nav-link" href="service.html">service</a>
           </li>
-<li class="nav-item">
+<li class="nav-item active">
             <a class="nav-link" href="blogs.html">
               blogs
             </a></li>
