--- a/contact.html
+++ b/contact.html
@@ -28,10 +28,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          <li class="nav-item ">
+            <a class="nav-link" href="index.html">Home</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="contact.html">contact us</a>
           </li>
           <li class="nav-item">
@@ -50,7 +50,7 @@
     </nav>
     
     <div class="container-fluid">
-     <section class="bagimg " style="background-image: url(./assets/images/jpj3.jpg);">
+     <section class="bagimg">
      <div class="row">
       <div class="col-md-12 text-center text-capitalize text-white">
         <h2 class="my-2 ">gift for you</h2>
