--- a/service.html
+++ b/service.html
@@ -37,7 +37,7 @@
             <li class="nav-item">
               <a class="nav-link" href="about.html">about</a>
                         </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="service.html">service</a>
             </li>
   <li class="nav-item">
